tests/neg/semantic_assert_message_bad_type.baa
// EXPECT: نوع المعامل 2 في 'تأكد' غير متوافق

صحيح الرئيسية() {
    تأكد(صواب، ١).
    إرجع ٠.
}
